# analise-avaliacoes-ecommerce

./: README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
