[tool.poetry]
name = "ecommerce-classification"
version = "0.1.0"
description = ""
authors = ["Lucas dos Santos Rodrigues Szavara <szavara.lucas.santos@gmail.com>"]
readme = "README.md"
packages = [{include = "ecommerce_classification"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
jupyterlab = "^4.1.4"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.1.post1"
pingouin = "^0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
